--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -14,6 +14,14 @@ railbow-gui-arrow=Direction of travel
 [titles]
 railbow-gui-title=RailBow Configuration
 
+[settings-name]
+railbow-rail-calculations-per-tick=Rail calculations per tick
+railbow-tile-calculations-per-tick=Tile calculations per tick
+
+[settings-description]
+railbow-rail-calculations-per-tick=The number of rail calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
+railbow-tile-calculations-per-tick=The number of tile calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
+
 [mod-description]
 RailBow=RailBow is a mod
 
