--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -10,6 +10,14 @@ railbow-get-selection-tool=RailBow selection tool
 [tooltips]
 railbow-open-gui=RailBow Configuration
 railbow-gui-arrow=Direction of travel
+railbow-select-preset=Use this preset
+railbow-add-preset=Add blank preset
+railbow-delete-preset=Delete this preset
+railbow-copy-preset=Copy currently open preset
+railbow-switch=Switch to this preset
+
+[captions]
+railbow-switch=Use
 
 [titles]
 railbow-gui-title=RailBow Configuration
