--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -25,11 +25,11 @@ railbow-gui-title=RailBow Configuration
 [settings-name]
 railbow-rail-calculations-per-tick=Rail calculations per tick
 railbow-tile-calculations-per-tick=Tile calculations per tick
-
+railbow-instant-build=Instant build
 [settings-description]
 railbow-rail-calculations-per-tick=The number of rail calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-tile-calculations-per-tick=The number of tile calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
-
+railbow-instant-build=Build tiles instantly if the player is in cheat, editor or god mode.
 [mod-description]
 RailBow=RailBow is a mod
 
