Updated for Factorio 2.0

--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -35,3 +35,6 @@ RailBow=RailBow is a mod
 
 [mod-name]
 RailBow=RailBow
+
+[fpedia-description]
+railbow-get-selection-tool-shortcut=Get RailBow selection tool
