--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -13,14 +13,21 @@ railbow-gui-arrow=Direction of travel
 railbow-select-preset=Use this preset
 railbow-add-preset=Add blank preset
 railbow-delete-preset=Delete this preset
-railbow-copy-preset=Copy currently open preset
+railbow-copy-preset=Copy preset
 railbow-switch=Switch to this preset
+railbow-export-preset=Create preset exchange string
+railbow-import-preset=Import a preset from an exchange string
 
 [captions]
 railbow-switch=Use
 
+[button]
+railbow-import=Confirm
+
 [titles]
 railbow-gui-title=RailBow Configuration
+export-preset=Export Preset
+import-preset=Import Preset
 
 [settings-name]
 railbow-rail-calculations-per-tick=Rail calculations per tick
@@ -31,7 +38,7 @@ railbow-rail-calculations-per-tick=The number of rail calculations to perform ea
 railbow-tile-calculations-per-tick=The number of tile calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-instant-build=Build tiles instantly if the player is in cheat, editor or god mode.
 [mod-description]
-RailBow=RailBow is a mod
+RailBow=RailBow provides a configurable selection tool for laying tiles around rails.
 
 [mod-name]
 RailBow=RailBow
