old way to place blueprint just here to preserve the code before removal

--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -17,26 +17,45 @@ railbow-copy-preset=Copy preset
 railbow-switch=Switch to this preset
 railbow-export-preset=Create preset exchange string
 railbow-import-preset=Import a preset from an exchange string
+railbow-build-mode=Change build mode
+railbow-remove-trees=Remove trees and rocks
+railbow-remove-cliffs=Remove cliffs
 
 [captions]
 railbow-switch=Use
 
 [button]
 railbow-import=Confirm
+railbow-remove-trees=Remove trees and rocks
+railbow-remove-cliffs=Remove cliffs
+
+[dropdown]
+railbow-build-mode=Blueprint build mode
 
 [titles]
 railbow-gui-title=RailBow Configuration
 export-preset=Export Preset
 import-preset=Import Preset
 
+[string-mod-setting]
+railbow-build-mode-normal=Normal
+railbow-build-mode-forced=Forced
+railbow-build-mode-superforced=Superforced
+
 [settings-name]
 railbow-rail-calculations-per-tick=Rail calculations per tick
 railbow-tile-calculations-per-tick=Tile calculations per tick
 railbow-instant-build=Instant build
+railbow-default-build-mode=Blueprint build mode
+railbow-default-remove-trees=Remove trees and rocks by default
+railbow-default-remove-cliffs=Remove cliffs by default
 [settings-description]
 railbow-rail-calculations-per-tick=The number of rail calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-tile-calculations-per-tick=The number of tile calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-instant-build=Build tiles instantly if the player is in cheat, editor or god mode.
+railbow-build-mode=Like holding shift or shift+ctrl when placing blueprints
+railbow-default-remove-trees=Rock and stone! and trees...
+railbow-default-remove-cliffs=Remove cliffs
 [mod-description]
 RailBow=RailBow provides a configurable selection tool for laying tiles around rails.
 
