feat: Rebranding to Railbow Refracted
feat: Major overhaul of the codebase

feat: Selection tool allows for multiple modes now

gui: Added checkboxes for tree/stone and cliff removal

perf: Changed from blueprint to ghost entity system to support obstacle removal. Minor impact on performance

compat: Added naked rail mod support

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,17 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-.github export-ignore
-.gitmodules export-ignore
+# Set the default behavior to automatically detect text files and perform LF normalization
+* text=auto
+
+# files that should not be modified
+*.png binary
+*.blend binary export-ignore
+
+# files that should not get included in a release zip
+README.md export-ignore
+.vscode export-ignore
 .git export-ignore
-demo export-ignore
-python_scripts export-ignore
+.github export-ignore
+.gitignore export-ignore
+.gitattributes export-ignore
+.releaserc export-ignore
+.mod-portal export-ignore
+.python_scripts export-ignore
