--- a/locale/en/RailBow.cfg
+++ b/locale/en/RailBow.cfg
@@ -1,5 +1,6 @@
 [controls]
 railbow-get-selection-tool=Get RailBow selection tool
+railbow-open-gui=Open the settings menu
 
 [item-name]
 railbow-selection-tool=RailBow selection tool
@@ -17,9 +18,15 @@ railbow-copy-preset=Copy preset
 railbow-switch=Switch to this preset
 railbow-export-preset=Create preset exchange string
 railbow-import-preset=Import a preset from an exchange string
-railbow-build-mode=Change build mode
 railbow-remove-trees=Remove trees and rocks
 railbow-remove-cliffs=Remove cliffs
+
+[item-description]
+railbow-selection-tool=RailBow selection tool
+railbow-selection-tool-place-tiles=__1__ to place selected tile preset around rails.
+railbow-selection-tool-place-forced=__1__ to landfill and place selected tile preset around rails.
+railbow-selection-tool-remove-tiles=__1__ to remove tiles around rails where the selected tile preset would be.
+railbow-selection-tool-remove-ents=__1__ to deconstruct trees/rocks/cliffs around rails.
 
 [captions]
 railbow-switch=Use
@@ -29,38 +36,33 @@ railbow-import=Confirm
 railbow-remove-trees=Remove trees and rocks
 railbow-remove-cliffs=Remove cliffs
 
-[dropdown]
-railbow-build-mode=Blueprint build mode
-
 [titles]
 railbow-gui-title=RailBow Configuration
-export-preset=Export Preset
-import-preset=Import Preset
-
-[string-mod-setting]
-railbow-build-mode-normal=Normal
-railbow-build-mode-forced=Forced
-railbow-build-mode-superforced=Superforced
+railbow-export-preset=Export Preset
+railbow-import-preset=Import Preset
 
 [settings-name]
 railbow-rail-calculations-per-tick=Rail calculations per tick
 railbow-tile-calculations-per-tick=Tile calculations per tick
 railbow-instant-build=Instant build
-railbow-default-build-mode=Blueprint build mode
 railbow-default-remove-trees=Remove trees and rocks by default
 railbow-default-remove-cliffs=Remove cliffs by default
+railbow-default-place-landfill=Always place landfill in normal mode
+railbow-debug=Debug
+
 [settings-description]
 railbow-rail-calculations-per-tick=The number of rail calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-tile-calculations-per-tick=The number of tile calculations to perform each tick. Higher values will cause more lag, but will also allow for faster calculations.
 railbow-instant-build=Build tiles instantly if the player is in cheat, editor or god mode.
-railbow-build-mode=Like holding shift or shift+ctrl when placing blueprints
 railbow-default-remove-trees=Rock and stone! and trees...
 railbow-default-remove-cliffs=Remove cliffs
+
 [mod-description]
-RailBow=RailBow provides a configurable selection tool for laying tiles around rails.
+description=RailBow Refracted provides a configurable selection tool for laying tiles and landfill around rails while removing trees.
 
 [mod-name]
-RailBow=RailBow
+title=RailBow Refracted
 
 [fpedia-description]
 railbow-get-selection-tool-shortcut=Get RailBow selection tool
+railbow-open-gui=Open mod UI
